Add basic content for learning topics and side projects, fix underline issue in footer

--- a/FlaskApp/templates/base.html
+++ b/FlaskApp/templates/base.html
@@ -35,12 +35,8 @@
     <section class="footer">
         <footer>
             <div class="icon-links">
-                <a class="contact-link" href="https://github.com/MikaylaRobinson" target="_blank">
-                    <i class="fab fa-github-square fa-2x"></i>
-                </a>
-                <a class="contact-link" href="https://www.linkedin.com/in/mikaylamrobinson/">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                </a>
+                <a class="contact-link" href="https://github.com/MikaylaRobinson" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
+                <a class="contact-link" href="https://www.linkedin.com/in/mikaylamrobinson/"><i class="fab fa-linkedin fa-2x"></i></a>
             </div>
         </footer>
 
