--- a/FlaskApp/templates/projects.html
+++ b/FlaskApp/templates/projects.html
@@ -7,131 +7,36 @@
     <div class="project-col">
         <div class="project_post first_post">
             <div class="project_post_photo">
-                <img src="../static/img/kitkat.jpg" alt="This is my kitty">
+                <img src="../static/img/austin_project.jpeg" alt="Austin Animal Shelter Data Project">
             </div>
             <div class="title_and_description">
-                <h1>The best side project of projects</h1>
-                <p>There are so many tools that I can use for a side project. This side project allows me to
-                    practice certain skills. Here are those skills and how I decided to practice them. </p>
+                <h1>Austin Animal Shelter Data Project</h1>
+                <h4>Tech: Python, Jupyter Notebooks, Seaborn DataVis Library, Pandas</h4>
+                <p>
+                    Are younger animals (such as puppies) more likely to be adopted than older adult animals?
+                    Is there a time of the year when animals are more likely to be adopted?
+                    (and more)
+                </p>
             </div>
         </div>
     </div>
-
 
     <div class="project-col">
         <div class="project_post second_post">
             <div class="project_post_photo">
-                <img src="../static/img/python_logo.jpg" alt="Python Logo">
+                <img src="../static/img/food_project.jpeg" alt="Google Search Trends Food Analysis">
             </div>
             <div class="title_and_description">
-                <h1>Generic Python Title</h1>
-                <p>A summary of what content can be expected-similar to a read me.</p>
+                <h1>Google Search Trends - Food Analysis</h1>
+                <h4>Tech: Python, Jupyter Notebooks, Seaborn DataVis Library, Pandas</h4>
+                <p>
+                    Analysis of Google Search Trends on food queries. How do foodbourne illness outbreaks affect food
+                    popularity? How have diet trends affected interest?
+                    (and more)
+                </p>
             </div>
         </div>
     </div>
 
-
-    <div class="project-col">
-        <div class="project_post third_post">
-            <div class="project_post_photo">
-                <img src="../static/img/python_logo.jpg" alt="Python Logo">
-            </div>
-            <div class="title_and_description">
-                <h1>Generic Python Title</h1>
-                <p>A summary of what content can be expected-similar to a read me.</p>
-            </div>
-        </div>
-    </div>
 </section>
 {% endblock %}
-
-
-
-<!---
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../static/css/style.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="../static/css/Grid.css" />
-    <script src="../static/js/main.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+HK|Open+Sans|Raleway&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Dosis:300|Lato:300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
-        crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Side projects</title>
-</head>
-
-<body>
-    <div class="header">
-        <img src="../static/img/mikayla.png" alt="logo">
-    </div>
-    <div class="nav_bar" id="my_nav_bar">
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <div class="fa fa-bars nav-bar-menu-icon"></div>
-        </a>
-        <a class="nav_bar-link" href="/">Home</a>
-        <a class="nav_bar-link" href="/learning_topics">Learning Topics</a>
-        <a class="nav_bar-link" href="/side_projects">Side Projects</a>
-        <a class="nav_bar-link" href="/about_me">About Me</a>
-    </div>
-    <section class="columns_of_projects">
-        <div class="project-col">
-            <div class="project_post first_post">
-                <div class="project_post_photo">
-                    <img src="../static/img/kitkat.jpg" alt="This is my kitty">
-                </div>
-                <div class="title_and_description">
-                    <h1>The best side project of projects</h1>
-                    <p>There are so many tools that I can use for a side project. This side project allows me to
-                        practice certain skills. Here are those skills and how I decided to practice them. </p>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="project-col">
-            <div class="project_post second_post">
-                <div class="project_post_photo">
-                    <img src="../static/img/python_logo.jpg" alt="Python Logo">
-                </div>
-                <div class="title_and_description">
-                    <h1>Generic Python Title</h1>
-                    <p>A summary of what content can be expected-similar to a read me.</p>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="project-col">
-            <div class="project_post third_post">
-                <div class="project_post_photo">
-                    <img src="../static/img/python_logo.jpg" alt="Python Logo">
-                </div>
-                <div class="title_and_description">
-                    <h1>Generic Python Title</h1>
-                    <p>A summary of what content can be expected-similar to a read me.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="footer">
-        <footer>
-            <div class="icon-links">
-                <a class="contact-link" href="https://github.com/MikaylaRobinson" target="_blank">
-                    <i class="fab fa-github-square fa-2x"></i>
-                </a>
-                <a class="contact-link" href="https://www.linkedin.com/in/mikaylamrobinson/">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                </a>
-            </div>
-        </footer>
-
-    </section>
-</body>
-
-</html>
--->
