--- a/FlaskApp/templates/topics.html
+++ b/FlaskApp/templates/topics.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Learning Topics{% endblock %}
 
 {% block content %}
 <section class="learning_topics">
@@ -9,17 +9,13 @@
     <div class="blog_post">
         <div class="post-col">
             <div class="blog_post_photo">
-                <img src="../static/img/kitkat.jpg" alt="Python Logo">
+                <img src="../static/img/python-icon.png" alt="Python Logo">
             </div>
         </div>
         <div class="post-col">
             <div class="title_and_description">
-                <h1>The Making of this Website</h1>
-                <p>A basic walkthrough of how I went about making my first real website. Including the ups, the
-                    downs, my mistakes, and my growth. Beginning with HTML and CSS to come up with my orginial
-                    website design, that developed into the Python Flask app that you're experiencing now! If you
-                    are new to web development, take a look at the mistakes I made and save yourself some time and
-                    trouble!</p>
+                <h1>Python</h1>
+                <p>Python 3.x, NumPy, Pandas, Data Visualization + Analysis</p>
                 <!-- <a class="read-more-button" href="#story_page">Read More</a> --->
             </div>
         </div>
@@ -29,43 +25,53 @@
     <div class="blog_post">
         <div class="post-col">
             <div class="blog_post_photo">
-                <img src="../static/img/kitkat.jpg" alt="Python Logo">
+                <img src="../static/img/sql-icon.png" alt="SQL Logo">
             </div>
         </div>
         <div class="post-col">
             <div class="title_and_description">
-                <h1>The Making of this Website</h1>
-                <p>A basic walkthrough of how I went about making my first real website. Including the ups, the
-                    downs, my mistakes, and my growth. Beginning with HTML and CSS to come up with my orginial
-                    website design, that developed into the Python Flask app that you're experiencing now! If you
-                    are new to web development, take a look at the mistakes I made and save yourself some time and
-                    trouble!</p>
+                <h1>SQL</h1>
+                <p>MySQL + MySQL WorkBench on Ubuntu 18.04</p>
                 <!-- <a class="read-more-button" href="#story_page">Read More</a> --->
             </div>
         </div>
-
     </div>
     <div class="topics-divider"></div>
 
     <div class="blog_post">
         <div class="post-col">
             <div class="blog_post_photo">
-                <img src="../static/img/kitkat.jpg" alt="Python Logo">
+                <img src="../static/img/tableau-icon.png" alt="Tableau Logo">
             </div>
         </div>
         <div class="post-col">
             <div class="title_and_description">
-                <h1>The Making of this Website</h1>
-                <p>A basic walkthrough of how I went about making my first real website. Including the ups, the
-                    downs, my mistakes, and my growth. Beginning with HTML and CSS to come up with my orginial
-                    website design, that developed into the Python Flask app that you're experiencing now! If you
-                    are new to web development, take a look at the mistakes I made and save yourself some time and
-                    trouble!</p>
+                <h1>Tableau</h1>
+                <p>Data Visualization and BI with Tableau
+
+                </p>
                 <!-- <a class="read-more-button" href="#story_page">Read More</a> --->
             </div>
         </div>
-
     </div>
+
+    <div class="topics-divider"></div>
+
+    <div class="blog_post">
+        <div class="post-col">
+            <div class="blog_post_photo">
+                <img src="../static/img/excel-icon.png" alt="Excel Logo">
+            </div>
+        </div>
+        <div class="post-col">
+            <div class="title_and_description">
+                <h1>Advanced Excel</h1>
+                <p>Pivot Tables, Advanced Formulas, Basic VBA</p>
+                <!-- <a class="read-more-button" href="#story_page">Read More</a> --->
+            </div>
+        </div>
+    </div>
+
     <div class="topics-divider"></div>
 </section>
 {% endblock %}
