--- a/FlaskApp/templates/about.html
+++ b/FlaskApp/templates/about.html
@@ -12,6 +12,8 @@
 <section class="block-section personal_photo_grid">
     <div class="photo_grid-col">
         <div class="photo_grid-container" id="photo_grid-container-1">
+                <div class="responsive_photo-div" id="responsive_photo-div-1"></div>
+            
             <div class="photo_grid-text-wrapper">
                 <div class="photo_grid-text noselect">
                     I co-parent this sweet girl. After moving into our apartment, my partner found her crying,
@@ -24,6 +26,8 @@
     </div>
     <div class="photo_grid-col">
         <div class="photo_grid-container" id="photo_grid-container-2">
+                <div class="responsive_photo-div" id="responsive_photo-div-2"></div>
+            
             <div class="photo_grid-text-wrapper">
                 <div class="photo_grid-text noselect">
                     My dog, Lillee, has been a dedicated best friend for many years. It was a tough decision, but
@@ -36,6 +40,7 @@
     <div class="photo_grid-col">
         <div class="photo_grid-container" id="photo_grid-container-3">
             <div class="photo_grid-text-wrapper">
+                <div class="responsive_photo-div" id="responsive_photo-div-3"></div>
                 <div class="photo_grid-text noselect">
                     I am a December 2018 graduate of Ohio Wesleyan University. I graduated with a major in Zoology
                     and a minor in Spanish. My major taught me major biological functions while applying the
@@ -49,6 +54,7 @@
     <div class="photo_grid-col">
         <div class="photo_grid-container" id="photo_grid-container-4">
             <div class="photo_grid-text-wrapper">
+                <div class="responsive_photo-div" id="responsive_photo-div-4"></div>
                 <div class="photo_grid-text noselect">
                     Originally from Ohio, I grew up in a rural, farming community. Most people do not know, but
                     llamas can be useful as guard animals due to their pack instinct and intimidating size.
