--- a/FlaskApp/static/css/media.scss
+++ b/FlaskApp/static/css/media.scss
@@ -1,5 +1,4 @@
 @import "color";
-
 // Responsive variables // 
 $navbar-break: 1275px;
 $tablet-width: 768px;
@@ -8,126 +7,176 @@ $phone-width: 450px;
 /* When the screen is less than 600 pixels wide, hide all links, except 
 for the first one ("Home"). Show the link that contains should open and 
 close the topnav (.icon) */
+
 @media screen and (max-width: $navbar-break) {
-  .nav_bar {
-    padding: 5px;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    display: block;
-    width: 100%;
-    background: white;
-    border-bottom: 1px lighten($outline-color, 70%) solid;
-  }
+	.nav_bar {
+		padding: 5px;
+		text-align: center;
+		position: fixed;
+		top: 0;
+		display: block;
+		width: 100%;
+		background: white;
+		border-bottom: 1px lighten($outline-color, 70%) solid;
+	}
 	.nav_bar a {
 		display: none;
 	}
 	.nav_bar a.icon {
 		float: right;
-    display: block;
-    margin: 0px auto;
-    width: 100%;
-    padding-bottom: 16px;
-  }
-  .header img {
-    display: none;
-  }  
-  .welcome {
-    padding-top: 65px;
-  }
-
-  .welcome {
-    width: 95%;
-  }
-  #photo_intro_container {
-    height: 150px;
-    width: 150px;
-  }
-
-  .nav_bar.responsive {
+		display: block;
+		margin: 0px auto;
+		width: 100%;
+		padding-bottom: 16px;
+	}
+	.header img {
+		display: none;
+	}
+	.welcome {
+		padding-top: 65px;
+	}
+	.welcome {
+		width: 95%;
+	}
+	#photo_intro_container {
+		height: 150px;
+		width: 150px;
+	}
+	.nav_bar.responsive {
 		position: relative;
 	}
 	.nav_bar.responsive a {
 		float: none;
 		display: block;
+	}
+	.blog_post {
+		width: 95%;
+	}
+	.blog_post h1 {
+		text-align: center;
+		line-height: 1.3em;
+	}
+	.blog_post_photo {
+		text-align: center;
+	}
+	.blog_post p {
+		text-align: justify;
+		line-height: 1.2em;
+	}
+	.topics-divider:first-of-type {
+		opacity: 0;
+	}
+	.columns_of_projects {
+		display: block;
+	}
+	.project-col {
+		border-width: 20em;
+		border-bottom: 1px solid #00000040;
+		width: 95%;
+	}
+	.project-col:not(:last-child) {
+		border-right: none;
+	}
+	.personal_photo_grid {
+		display: block;
+	}
+
+
+.responsive_photo-div {
+  display: block;
+  height: 200px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+#responsive_photo-div {
+  &-1 {
+    background-image: url("../img/kitkat.jpg");
+  }
+  &-2 {
+    background-image: url("../img/lillee.jpg");
+  }
+  &-3 {
+    background-image: url("../img/graduation.jpg");
+  }
+  &-4 {
+    background-image: url("../img/llama.jpg");
+  }
+}
+
+.photo_grid-container {
+  background: none;
+}
+
+.photo_grid-text {
+  opacity: 1;
+  color: black;
+  font-size: 1.2em;
+}
+}
+
+@media screen and (min-width: $navbar-break) {
+	.photo_grid-container {
+		width: 100%;
+		height: 500px;
+		background-size: cover;
+		background-position: 50% 50%;
+		&:hover {
+			.photo_grid-text-wrapper {
+				background-color: $outline-color;
+				display: grid;
+			}
+			.photo_grid-text {
+				display: inherit;
+				opacity: 1;
+			}
+		}
+	}
+	.responsive_photo-div {
+		display: none;
   }
   
-  .blog_post {
-    width: 95%;
-  }
-
-  .blog_post h1 {
-    text-align: center;
-    line-height: 1.3em;
-  }
-
-  .blog_post_photo {
-    text-align: center;
-  }
-
-
-  .blog_post p {
-    text-align: justify;
-    line-height: 1.2em;
-  }
-
-  .topics-divider:first-of-type {
-    opacity: 0;
-  }
-
-  .columns_of_projects {
-    display: block;
-  }
-
-  .project-col {
-    border-width: 20em;
-    border-bottom: 1px solid #00000040;
-    width: 95%;
-    
-  }
-
-  .project-col:not(:last-child) {
-    border-right: none;
-  }
-
-  .personal_photo_grid {
-    display: block;
-  }
-
-  .photo_grid-text-wrapper {
-  }
-
-
+  #photo_grid-container {
+    &-1 {
+        background-image: url("../img/kitkat.jpg");
+        }
+    &-2 {
+        background-image: url("../img/lillee.jpg");
+        }
+    &-3 {
+        background-image: url("../img/graduation.jpg");
+        }
+    &-4 {
+        background-image: url("../img/llama.jpg");
+        }
+    }
 }
 
 @media screen and (max-width: $tablet-width) {
-  .blog_post {
-    display: block;
-  }
-
-  .welcome {
-    width: 75%;
+	.blog_post {
+		display: block;
+	}
+	.welcome {
+		width: 75%;
   }
 }
 
+
 @media screen and (max-width: $phone-width) {
-  .blog_post_photo img{
-    width: 100%;
-    height: initial;
-    border-radius: 100px;
-    margin-top: 20px
-  }
-
-  .blog_post {
-    width: 100%;
-  }
-
-  .title_and_description {
-    padding: 0;
-    padding-top: 1em;
-  }
-
-  .learning_topics {
-    margin: 0 1em;
-  }
+	.blog_post_photo img {
+		width: 100%;
+		height: initial;
+		border-radius: 100px;
+		margin-top: 20px
+	}
+	.blog_post {
+		width: 100%;
+	}
+	.title_and_description {
+		padding: 0;
+		padding-top: 1em;
+	}
+	.learning_topics {
+		margin: 0 1em;
+	}
 }
