--- a/FlaskApp/static/css/media.scss
+++ b/FlaskApp/static/css/media.scss
@@ -167,7 +167,8 @@ close the topnav (.icon) */
 		width: 100%;
 		height: initial;
 		border-radius: 100px;
-		margin-top: 20px
+		margin-top: 20px;
+		max-width: 100px;
 	}
 	.blog_post {
 		width: 100%;
@@ -178,5 +179,13 @@ close the topnav (.icon) */
 	}
 	.learning_topics {
 		margin: 0 1em;
+	}
+
+	.title_and_description p {
+		text-align: center;
+	}
+	
+	.topics-divider {
+		width: 50%;
 	}
 }
