--- a/FlaskApp/static/css/style.css
+++ b/FlaskApp/static/css/style.css
@@ -173,7 +173,6 @@ h1 {
 
 .blog_post_photo img {
   height: 200px;
-  border-radius: 100px;
   margin-top: 20px; }
 
 .read-more-button {
@@ -388,7 +387,8 @@ close the topnav (.icon) */
     width: 100%;
     height: initial;
     border-radius: 100px;
-    margin-top: 20px; }
+    margin-top: 20px;
+    max-width: 100px; }
 
   .blog_post {
     width: 100%; }
@@ -398,6 +398,12 @@ close the topnav (.icon) */
     padding-top: 1em; }
 
   .learning_topics {
-    margin: 0 1em; } }
+    margin: 0 1em; }
+
+  .title_and_description p {
+    text-align: center; }
+
+  .topics-divider {
+    width: 50%; } }
 
 /*# sourceMappingURL=style.css.map */
