--- a/FlaskApp/static/css/main.scss
+++ b/FlaskApp/static/css/main.scss
@@ -91,6 +91,10 @@ h1 {
     display: inline-block;
 }
 
+.nav_bar-link-active {
+    font-weight: 800;
+}
+
 .nav-bar-menu-icon {
     color: black;
     padding-top: 12px;
