Side projects page photo alignment responsive

--- a/FlaskApp/static/css/main.scss
+++ b/FlaskApp/static/css/main.scss
@@ -283,7 +283,10 @@ h1 {
 
 .project_post_photo img{
     height: 200px;
-    margin-top: 20px
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 //Footer
