--- a/FlaskApp/static/css/media.scss
+++ b/FlaskApp/static/css/media.scss
@@ -164,6 +164,10 @@ close the topnav (.icon) */
 		margin: 0px auto;
 		text-align: center;
 	}
+
+	.project_post {
+		text-align: center;
+	}
 }
 
 @media screen and (max-width: $phone-width) {
