--- a/FlaskApp/static/css/main.scss
+++ b/FlaskApp/static/css/main.scss
@@ -276,6 +276,10 @@ h1 {
 
 }
 
+.project-col {
+    margin: auto;
+}
+
 .project-col:not(:last-child) {
     border-right: 1px solid #00000040;
 
@@ -283,6 +287,7 @@ h1 {
 
 .project_post_photo img{
     height: 200px;
+    max-width: 100%;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
