--- a/FlaskApp/static/css/media.scss
+++ b/FlaskApp/static/css/media.scss
@@ -208,4 +208,12 @@ close the topnav (.icon) */
 		margin: 0px auto;
 		text-align: center;
 	}
+	.about_me {
+		background: url("../img/mobile-about-me\ -cover.jpg");
+		width: 100%;
+		height: 500px;
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+	}
 }
