connect to database

--- a/FlaskApp/templates/about.html
+++ b/FlaskApp/templates/about.html
@@ -5,8 +5,7 @@
 {% block content %}
 <section class="about_me">
     <div class="about_me-text-container">
-        <div class="about_me-text-box"> Hello stranger. Please look at me on this train platform. <br><br> I
-            LOOOOVE train platforms! Look how happy I am!</div>
+        <div class="about_me-text-box"> Hi, I'm Mikayla!</div>
     </div>
 </section>
 <section class="block-section personal_photo_grid">
@@ -15,7 +14,7 @@
             <div class="responsive_photo-div" id="responsive_photo-div-1"></div>
             <div class="photo_grid-text-wrapper">
                 <div class="photo_grid-text noselect">
-                    I co-parent this sweet girl. After moving into our apartment, my partner found her crying,
+                    I co-parent tgit his sweet girl. After moving into our apartment, my partner found her crying,
                     starving, and dirty on the street. After a trip to the vet and countless cans of cat food, she
                     has turned into a happy and healthy cat. She now goes by KitKat and spends her days finding new
                     places to nap around the house.
