--- a/FlaskApp/templates/base.html
+++ b/FlaskApp/templates/base.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../static/css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/static/css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../static/js/main.js"></script>
+    <script src="/static/js/main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Dosis:300|Lato:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
@@ -18,7 +18,7 @@
 
 <body>
     <div class="header">
-        <img src="../static/img/mikayla.png" alt="logo">
+        <img src="/static/img/mikayla.png" alt="logo">
     </div>
     <div class="nav_bar" id="my_nav_bar">
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
