View all blog posts page

--- a/FlaskApp/templates/control_panel.html
+++ b/FlaskApp/templates/control_panel.html
@@ -4,4 +4,5 @@
     <h1>Control Panel</h1>
     
     <a href="/admin/blog/new">New Blog Post</a>
+    <a href="/admin/blog/view_all">View all Blog Database Table rows</a>
 {% endblock %}
