Fix HTML5 validation

--- a/FlaskApp/templates/base.html
+++ b/FlaskApp/templates/base.html
@@ -17,7 +17,7 @@
 
         gtag('config', 'UA-132318681-2');
     </script>
-    <link href="https://fonts.googleapis.com/css?family=Dosis:300|Lato:300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis:300%7CLato:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
         crossorigin="anonymous">
