Adding and removing side project posts

--- a/FlaskApp/templates/control_panel.html
+++ b/FlaskApp/templates/control_panel.html
@@ -8,4 +8,10 @@
 <li>
     <a href="/admin/blog/view_all">View all Blog Database Table rows</a>
 </li>
+<li>
+    <a href="/admin/project/new">New Side Project Post</a>
+</li>
+<li>
+    <a href="/admin/project/view_all">View all Side Project Database Table rows</a>
+</li>
 {% endblock %}
