View all images page'

--- a/FlaskApp/templates/admin_pages/control_panel.html
+++ b/FlaskApp/templates/admin_pages/control_panel.html
@@ -24,5 +24,8 @@
     <li>
         <a href="/admin/image_upload">Image Upload</a>
     </li>
+    <li>
+        <a href="/admin/view_images">View all uploaded images</a>
+    </li>
 </div>
 {% endblock %}
