--- a/FlaskApp/templates/admin_pages/blog_new.html
+++ b/FlaskApp/templates/admin_pages/blog_new.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}\
 
 {% block additional_tags %}
-<link href='https://cdn.jsdelivr.net/npm/froala-editor@3.0.0/css/froala_editor.pkgd.min.css' rel='stylesheet' type='text/css' />
-<script type='text/javascript' src='https://cdn.jsdelivr.net/npm/froala-editor@3.0.0/js/froala_editor.pkgd.min.js'></script>
+<script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
+<script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
 {% endblock %}
 
 {% block content %}
@@ -33,7 +33,7 @@
         </p>
         <p>
             {{ form.content.label }}<br>
-            {{ form.content(size=32) }}<br>
+            {{ form.content(size=32, rows='50',cols='150') }}<br>
             {% for error in form.content.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
@@ -41,7 +41,4 @@
         <p>{{ form.submit() }}</p>
     </form>
 </div>
-<script>
-    var editor = new FroalaEditor('#content')
-</script>
 {% endblock %}
