--- a/FlaskApp/templates/admin_pages/project_new.html
+++ b/FlaskApp/templates/admin_pages/project_new.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
 {% block additional_tags %}
-<link href='https://cdn.jsdelivr.net/npm/froala-editor@3.0.0/css/froala_editor.pkgd.min.css' rel='stylesheet' type='text/css' />
-<script type='text/javascript' src='https://cdn.jsdelivr.net/npm/froala-editor@3.0.0/js/froala_editor.pkgd.min.js'></script>
+<script src="https://cdn.ckeditor.com/4.11.4/standard/ckeditor.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -42,6 +41,6 @@
     </form>
 </div>
 <script>
-    var editor = new FroalaEditor('#content')
+        CKEDITOR.replace( 'content' );
 </script>
 {% endblock %}
