Changing file structure to address circular dependencies, code still to be cleaned up

--- a/FlaskApp/templates/blog.html
+++ b/FlaskApp/templates/blog.html
@@ -3,7 +3,7 @@
 {% block title %}Learning Topics{% endblock %}
 
 {% block content %}
-<section class="learning_topics">
+<section class="blog">
     <div class="topics-divider"></div>
 
     <div class="blog_post">
