Changing welcome text

--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -10,11 +10,8 @@
         <div class="home-about-me">
             <p>Hi, I'm Mikayla!</p>
             <div class="paragraph-divider"></div>
-            <p>Welcome to my website! Follow along as I explore topics in data science and technology. This blog
-                will highlight my personal side projects as well as include informational posts about new topics.
-                As I tackle new topics, my posts will demonstrate my learning process to serve as a studying
-                tool for myself and hopefully for others that want to make the jump into learning about this field.
-            </p>
+            <p>I'm a biologist turned data analyst - I was a life sciences major in college, who discovered a passion for data analysis. </p>
+            <p>Welcome to my site!</p>
         </div>
     </div>
 </section>
