Editing background position of about me photo

--- a/FlaskApp/static/css/main.scss
+++ b/FlaskApp/static/css/main.scss
@@ -113,6 +113,7 @@ h1 {
     background-size: cover;
     padding: 20px 0px, 0px, 0px;
     margin: 0px;
+    background-position: 50% 24%;
 }
 
 .about_me h1, {
