Correcting about me page typos

--- a/FlaskApp/templates/about.html
+++ b/FlaskApp/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}About Me{% endblock %}
 
 {% block content %}
 <section class="about_me">
@@ -14,7 +14,7 @@
             <div class="responsive_photo-div" id="responsive_photo-div-1"></div>
             <div class="photo_grid-text-wrapper">
                 <div class="photo_grid-text noselect">
-                    I co-parent tgit his sweet girl. After moving into our apartment, my partner found her crying,
+                    I co-parent this sweet girl. After moving into our apartment, my partner found her crying,
                     starving, and dirty on the street. After a trip to the vet and countless cans of cat food, she
                     has turned into a happy and healthy cat. She now goes by KitKat and spends her days finding new
                     places to nap around the house.
