--- a/FlaskApp/templates/blog.html
+++ b/FlaskApp/templates/blog.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Learning Topics{% endblock %}
+{% block title %}Blog{% endblock %}
 
 {% block content %}
 <section class="blog">
