--- a/FlaskApp/static/css/style.css
+++ b/FlaskApp/static/css/style.css
@@ -147,51 +147,22 @@ h1 {
 .blog {
   margin: 0 4em 0 4em; }
 
-.blog_post {
-  text-align: left;
-  background-color: none;
-  padding-top: 6px;
-  margin-bottom: 2em;
-  text-align: left;
-  width: 60%;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  margin: 1em auto;
-  line-height: 1.4em;
-  height: auto; }
+.blog-post-title {
+  margin-bottom: 3px; }
+  .blog-post-title a {
+    color: #222; }
 
-.blog_post .col {
-  display: block; }
+.blog-post-date {
+  font-size: .8em;
+  margin-top: 0px; }
 
-.topics-divider {
-  height: 1px;
-  width: 20em;
-  border-bottom: 1px solid #00000040;
-  display: block;
-  margin: 1em auto;
-  padding: 1em 0em 1em 0em; }
-
-.title_and_description {
-  padding: 1em;
-  padding-bottom: 0; }
-
-.blog_post_photo img {
-  height: 200px;
-  margin-top: 20px;
-  margin: 0px auto;
-  display: block; }
-
-.read-more-button {
-  text-decoration: none;
-  color: #3d393a;
-  float: right;
-  margin-right: 2em;
-  font-size: 1.2em;
-  padding: 8px;
-  border: 1px solid #00000040;
-  border-radius: 100px; }
-  .read-more-button:hover {
-    border: 1px solid black; }
+.blog-post-tools {
+  background-color: #00bcd452;
+  display: inline-block;
+  padding: 0.6em;
+  border-radius: 1em;
+  font-size: .8em;
+  margin: 0px; }
 
 .welcome {
   margin: 0px auto;
