--- a/FlaskApp/templates/post.html
+++ b/FlaskApp/templates/post.html
@@ -1,24 +1,16 @@
 {% extends 'base.html' %}
 
-{% block title %}Blog{% endblock %}
+{% block title %}{{post.url_slug}}{% endblock %}
 
 {% block content %}
 <section class="blog">
-    {% for post in posts.items %}
-    <div class="blog-list-item">
+    <a href="/blog">Back to Posts</a>
+    <div class="blog-post">
         <h4 class="blog-post-title"><a href="/blog/{{post.url_slug}}">{{post.title}}</a></h4>
         <p class="blog-post-date">{{post.date.strftime('%m-%d-%Y')}}</p>
         <p class="blog-post-subtitle">{{post.keyword}}</p>
         <p class="blog-post-tools">{{post.tools_used}}</p>
+        <p class="blog=post-content">{{post.content|safe}}</p>
     </div>
-    {% endfor %}
-    {% if prev_url %}
-    <a href="{{ prev_url }}">Newer posts</a>
-    {% endif %}
-    {% if next_url %}
-    <a href="{{ next_url }}">Older posts</a>
-    {% endif %}
-
-    
 </section>
 {% endblock %}
