Correcting tab title for side projects page

--- a/FlaskApp/templates/projects.html
+++ b/FlaskApp/templates/projects.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Side Projects{% endblock %}
 
 {% block content %}
 <section class="columns_of_projects">
